--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-actions": "^3.0.0",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "@types/redux-define": "^1.1.4"
   }
 }
